appフォルダ追加

--- a/app/sass/common.scss
+++ b/app/sass/common.scss
@@ -9,7 +9,7 @@
 
 body{
 	position: relative;
-	font-family: "Open Sans","ヒラギノ角ゴ ProN W3","Hiragino Kaku Gothic ProN","メイリオ",Meiryo,"游ゴシック",YuGothic,sans-serif;
+	font-family: "Open Sans", "游ゴシック", "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo,YuGothic,sans-serif;
 	font-size: 12px;
 	color: #333;
 	-webkit-text-size-adjust: none;
